[package]
name = "alox-bytecode"
version = "0.1.0"
authors = ["Ayomide Bamidele <48062697+MozarellaMan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rustyline = "8.0"
clap = "2.3"
